k8s-mcp-server/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-mcp-server
  namespace: k8s-mcp-server
spec:
  type: ClusterIP
  selector:
    app: k8s-mcp-server
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
...
