k8s-mcp-server/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: k8s-mcp-server
  namespace: k8s-mcp-server
  annotations:
    link.argocd.argoproj.io/external-link: "https://k8s-mcp-server.argocd-k3s-test.local.panzer1119.de"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`k8s-mcp-server.argocd-k3s-test.local.panzer1119.de`)
      services:
        - name: k8s-mcp-server
          port: 80
...
